--- a/Back-End/index.html
+++ b/Back-End/index.html
@@ -2,37 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Display Webcam Stream</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <style>
-            body {
-                margin: 0;
-                padding: 0;
-                width: 100vw;
-                height: 100vh;
-            }
-            canvas {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                z-index: 2;
-                background-color: transparent;
-            }
-            video {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-            }
-        </style>
+        <title>FRATS Backend</title>
     </head>
 
     <body>
-        <video onplay="onPlay(this)" id="inputVideo" autoplay muted></video>
-        <canvas id="overlay"></canvas>
-
-        <script src="face-api.js"></script>
-        <script src="index.js"></script>
+        <h1>Backend is running BABY</h1>
     </body>
 </html>
